--- a/references.bib
+++ b/references.bib
@@ -530,6 +530,23 @@
   publisher	= {IEEE}
 }
 
+@misc{reactive2024,
+	title = {{ReactiveX}},
+	author = {{Rxteam}},
+	year = {2024},
+	month = jun,
+	note = {[Online; accessed 15. Mar. 2025]},
+	url = {https://reactivex.io}
+}
+
+@book{fogus2013,
+  title={Functional JavaScript: Introducing Functional Programming with Underscore. js},
+  author={Fogus, Michael},
+  year={2013},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+
 @Book{		  cairo2012,
   title		= {The Functional Art: An introduction to information
 		  graphics and visualization},
